--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <header>
+    <header class="container-header">
         <nav>
 
             <img src="crow.png" alt="logo">
