--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 
         <section>
 
-            <video src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm">
+            <video width="420" height="315"
+            src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm">
                 
 
             </video>
 
 
-            <video controls>
+            <video width="420" height="315" controls>
                 <source
                 type="video/mp4"
                 src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"
@@ -37,7 +38,7 @@
             </video>
 
 
-            <iframe width="420" height="315"
+            <iframe width="420" height="275"
                 src="https://www.youtube.com/embed/tgbNymZ7vqY"
             >
 
@@ -46,15 +47,22 @@
         </section>
     </main>
 
-    <section class="container-section-promo">
+    <section>
+        <h1 class="encabezado">PUBLICA TU CONTENIDO</h1>
 
-        <video controls></video>
-
-        <article class="item-article">
-            
-        </article>
-
+        <p class="encabezado-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore quasi odit? Voluptates nemo, dicta esse natus saepe laboriosam corporis id maiores libero, cum quo molestiae eos deleniti? Rerum, quae!</p>
     </section>
+
+    <form class="container-section-promo">
+
+        <p>Más Informacion:</p>
+
+        <div class="input-email">
+            <input type="text" name="E-mail" id="Cajon-email" placeholder="Ingresa E-mail"/>
+            <button class="boton">Start</button>
+        </div>
+
+    </form>
 
     <footer>
 
